# P2P-Project

./: BitfieldManager.cpp  BitfieldManager.h  CMakeLists.txt  Common.cfg  Config.cpp  Config.h  FileHandling.cpp  FileHandling.h  PeerInfo.cfg  PeerProccess.cpp  PeerProccess.h  PeerProcess.cpp  PeerProcess.h  README.md  logger.cpp  logger.h  main.cpp  messageSender.cpp  messageSender.h
peer_1001/: thefile.part
